--- a/src/common/css/colors.scss
+++ b/src/common/css/colors.scss
@@ -1,3 +1,8 @@
 $color-brand-primary: #ffc300;
 $color-brand-primary2: #151515;
 $primary-color: #F15B5B;
+$bg-color: #151728;
+$border-color: #272a3a;
+$side-title: #5c5e6e;
+$button: #8f98a9;
+$side-link: #9c9cab;
