--- a/src/common/css/variables.scss
+++ b/src/common/css/variables.scss
@@ -3,3 +3,7 @@ $size-icon-unit: 24px;
 // $footer-background:
 $font-unit: 'Raleway',
 sans-serif;
+$title-font: "DM Sans",
+sans-serif;
+$body-font: "Source Sans Pro",
+sans-serif;
